# gswarp

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  README_pypi.md  README_zh.md  __init__.py  _warp_backend.py  pyproject.toml  warp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml
benchmarks/: classic_methods_microbench.py  rasterizer_microbench.py
docs/: knn.md  knn_zh.md  performance_backlog.md  rasterizer.md  rasterizer_zh.md  ssim.md  ssim_zh.md
figures/full-warp/: benchmark_summary.json  benchmark_summary.txt
gswarp/: __init__.py  _rasterizer.py  _rasterizer_flow.py  _stream.py  _tuning.py  fused_ssim.py  knn.py  rasterizer.py  rasterizer_flow.py
gswarp/_internal/: __init__.py  coverage.py
gswarp/_internal/api/: empty.py  outputs.py  runtime_context.py  validation.py
gswarp/_internal/backends/: select.py
gswarp/_internal/backends/warp/: advanced.py  backend_2dgs.py  backend_3dgs.py  backend_3dgs_advanced.py  backend_3dgs_flow.py  backend_3dgs_flow_advanced.py  backend_generated_3dgs.py  backend_mip_3dgs.py  backward_kernels.py  backward_ops.py  binning_kernels.py  binning_ops.py  capabilities.py  constants.py  flow_kernels.py  flow_ops.py  math_kernels.py  memory.py  packing.py  preprocess_kernels.py  preprocess_ops.py  render_kernels.py  render_ops.py  runtime.py  state.py
gswarp/_internal/frontend/: __init__.py  common.py  flow_autograd.py  mip_autograd.py  standard_autograd.py  twod_autograd.py
gswarp/_internal/methods/: __init__.py  contracts.py  pipeline.py  registry.py  spec.py
gswarp/methods/: __init__.py  baseline_3dgs.py  flow_aux.py  generated_3dgs.py  mip_3dgs.py  twodgs.py
tests/: test_classic_variant_method_contracts.py  test_classic_variant_methods_cuda.py  test_fused_ssim_cuda_contracts.py  test_method_plans.py  test_public_contracts.py  test_rasterizer_cuda_contracts.py  test_runtime_options.py  test_tile_coverage.py  test_twodgs_means2d_proxy_cuda.py
warp_backend/: api.py
