[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gswarp"
version = "1.0.2"
description = "Pure-Python NVIDIA Warp backend for 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "GSWarp contributors" }
]
keywords = ["3dgs", "gaussian-splatting", "warp", "rasterization", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.0",
  "warp-lang>=1.12.0",
]

[tool.setuptools]
packages = ["gswarp"]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.package-dir]
"gswarp" = "gswarp"