[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gswarp"
dynamic = ["version"]
description = "Pure-Python NVIDIA Warp backend for 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "GSWarp contributors" }
]
keywords = ["3dgs", "gaussian-splatting", "warp", "rasterization", "pytorch"]
classifiers = [
  "Development Status :: pre release",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=1.13",
  "warp-lang>=1.8.0",
]

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["gswarp*"]

[tool.setuptools.dynamic]
version = { attr = "gswarp.__version__" }